--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeeaf.org">
 
 <head th:fragment = "common-header">
-    <title>DevOps Buddy</title>
+    <title>Survey App</title>
 
     <!-- Bootstrap core CSS -->
     <link th:href="@{webjars/bootstrap/3.3.6/css/bootstrap.min.css}"
