--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
-<head th:replace="common/header :: common-header" />
+<head th:replace="common/header :: common-header"/>
 
 <body>
 
-<div th:replace="common/navbar :: common-navbar" />
+<div th:replace="common/navbar :: common-navbar"/>
 
 <div class="container">
 
@@ -16,13 +16,13 @@
                 <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                     <span aria-hidden="true">x</span>
                 </button>
-                <p th:text="#{login.error.message}" />
+                <p th:text="#{login.error.message}"/>
             </div>
             <div th:if="${param.logout}" class="alert alert-success alert-dismissible" role="alert">
                 <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                     <span aria-hidden="true">x</span>
                 </button>
-                <p th:text="#{login.logout.success}" />
+                <p th:text="#{login.logout.success}"/>
             </div>
         </div>
     </div>
@@ -35,8 +35,8 @@
 
                 <div class="text-center">
 
-                    <h1 th:text="#{login.h1.text}" />
-                    <p class="lead" th:text="#{login.p.lead}" />
+                    <h1 th:text="#{login.h1.text}"/>
+                    <p class="lead" th:text="#{login.p.lead}"/>
 
                 </div>
 
@@ -47,36 +47,39 @@
                           method="post">
 
                         <div class="form-group">
-                            <label for="username" th:text="#{login.username.text}" />
-                            <input type="text" id="username" name="username" class="form-control" />
+                            <label for="username" th:text="#{login.username.text}"/>
+                            <input type="text" id="username" name="username" class="form-control"/>
                         </div>
 
                         <div class="form-group">
-                            <label for="password" th:text="#{login.password.text}" />
-                            <input type="password" id="password" name="password" class="form-control" />
+                            <label for="password" th:text="#{login.password.text}"/>
+                            <input type="password" id="password" name="password" class="form-control"/>
                         </div>
 
                         <div class="form-group">
-                            <button type="submit" th:text="#{navbar.login.text}" class="btn btn-primary" />
+                            <button type="submit" th:text="#{navbar.login.text}" class="btn btn-primary"/>
                         </div>
 
                     </form>
 
-                    <a th:href="@{/forgotmypassword}" th:text="#{login.forgot.password.text}" />
+                    <div class="row">
+                        <div class="col-md-6 text-left">
+                            <a th:href="@{/forgotmypassword}" th:text="#{login.forgot.password.text}"/>
+                        </div>
+                        <div class="col-md-6 text-right">
+                            <a th:href="@{/signup?planId=1}" th:text="#{login.page.signup.link}"/>
+                        </div>
+                    </div>
                 </div>
-
             </div>
-
         </div>
-
     </div>
-
 </div>
 
 <!-- Bootstrap core JavaScript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
-<div th:replace="common/header :: before-body-scripts" />
+<div th:replace="common/header :: before-body-scripts"/>
 
 </body>
 </html>
