--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -24,6 +24,12 @@
                 </button>
                 <p th:text="#{login.logout.success}"/>
             </div>
+            <div th:if="${verified==true}" class="alert alert-success alert-dismissible" role="alert">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">x</span>
+                </button>
+                <p th:text="#{login.account.creation.success}"/>
+            </div>
         </div>
     </div>
 
