--- a/src/main/resources/templates/common/navbar.html
+++ b/src/main/resources/templates/common/navbar.html
@@ -18,6 +18,12 @@
                 <li class="active"><a th:text="#{navbar.home.text}" href="/"></a></li>
                <!-- <li><a th:text="#{navbar.about.text}" href="/about"></a></li>-->
                 <li><a th:text="#{navbar.contact.text}" href="/contact"></a></li>
+                <li th:if="${#authorization.expression('isAuthenticated()')}">
+                    <a th:text="#{navbar.change.role.text}" href="/payload"></a></li>
+                <li th:if="${role=='surveyor'}">
+                    <a th:text="#{navbar.create.survey.text}" href="/payload"></a></li>
+                <li th:if="${role=='surveyee'}">
+                    <a th:text="#{navbar.take.survey.text}" href="/payload"></a></li>
             </ul>
 
             <ul class="nav navbar-nav navbar-right">
