--- a/src/main/resources/templates/common/navbar.html
+++ b/src/main/resources/templates/common/navbar.html
@@ -21,7 +21,8 @@
                 <li th:if="${#authorization.expression('isAuthenticated()')}">
                     <a th:text="#{navbar.change.role.text}" href="/payload"></a></li>
                 <li th:if="${role=='surveyor'}">
-                    <a th:text="#{navbar.create.survey.text}" href="/payload"></a></li>
+                    <a th:text="#{navbar.create.survey.text}" href="/payload"></a>
+                </li>
                 <li th:if="${role=='surveyee'}">
                     <a th:text="#{navbar.take.survey.text}" href="/payload"></a></li>
             </ul>
