--- a/src/main/resources/templates/surveyor/surveyorHome.html
+++ b/src/main/resources/templates/surveyor/surveyorHome.html
@@ -15,25 +15,42 @@
 
             <div class="jumbotron">
 
-                <div class="text-center">
+
+                <button type="button" class="btn btn-info btn-lg"  th:href="@{/survey/createSurvey}">Create Survey</button>
+
+                <!--<div class="text-center">-->
+
+                    <!--<div class="col-sm-12">-->
+                        <!--<table>-->
+                            <!--<tr th:each="survey : ${surveys}">-->
+                                <!--<td th:text="${survey}">1</td>-->
+                            <!--</tr>-->
+                        <!--</table>-->
+                    <!--</div>-->
+
 
                    <!-- <h1 th:text=""/>
 
                     <p class="lead" th:text=""/>
 -->
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div class="well">
+                    <!--<div class="container">-->
+                        <!--<div class="row">-->
+                            <!--<div class="col-md-6">-->
+                                <!--<div class="well">-->
 
-                                </div>
-                            </div>
-                        </div>
+                                <!--</div>-->
+                            <!--</div>-->
+                        <!--</div>-->
 
-                    </div>
+                    <!--</div>-->
 
-                </div>
+                <!--</div>-->
 
+            </div>
+
+           <h2>List of surveys...</h2>
+            <div class="btn-group-vertical" th:each="survey : ${surveys}">
+                <a  th:href="@{/surveyor/stats(description=${survey})}" class="btn btn-primary" th:text="${survey}"></a>
             </div>
 
         </div>
