added star type question type

--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -10,9 +10,13 @@
 
     <!-- Custom CSS -->
     <link type="text/css" th:href="@{/css/style.css}" rel="stylesheet" media="screen"/>
+    <link type="text/css" th:href="@{/css/5star.css}" rel="stylesheet" media="screen"/>
 
     <!-- Form validation -->
     <link type="text/css" th:href="@{/css/formValidation.min.css}" rel="stylesheet" media="screen"/>
+
+    <!-- Font Awesome Icon Library -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 
 </head>
 
