--- a/src/main/resources/templates/surveyelements/Question.html
+++ b/src/main/resources/templates/surveyelements/Question.html
@@ -38,8 +38,8 @@
         <div class="row">
             <div class="col-md-12">
                 <form class="form-group" id="editoptions">
-                    <label id="quesText">Type your question here</label><br/>
-                    <input type="text" class="text" id="quesTextField" oninput="editMultipleChoiceQuesText()"/>
+                    <label id="multiChoiceQuesText">Type your question here</label><br/>
+                    <input type="text" class="text" id="multipleChoiceQuesTextField" oninput="editMultipleChoiceQuesText()"/>
                     <br/><br/>
                     <label>Edit Options</label><br/>
                     <input type="text" class="text" id="option1Text" oninput="changeMultipleChoiceOptionText('option1')"
@@ -61,26 +61,18 @@
         <div class="col-md-12">
             <div class="jumbotron" onclick="editTrueFalseQues()">
                 <h4 id="questionTF">New Question here...</h4>
-                <!-- <div class="container">
-                     <div class="row">
-                         <div class="col-md-12">
-                             <div class="well">-->
                 <div class="row">
                     <div class="col-md-12">
-                        <form id="options">
+                        <form id="optionsTF">
                             <div class="form-control">
-                                <input type="radio" name="TF" value="True"/><label style="margin-left: 20px" id="option1">True</label>
+                                <input type="radio" name="TF" value="True"/><label style="margin-left: 20px" id="true">True</label>
                             </div>
                             <div class="form-control">
-                                <input type="radio" name="TF" value="False"/> <label style="margin-left: 20px" id="option2">False</label>
+                                <input type="radio" name="TF" value="False"/> <label style="margin-left: 20px" id="false">False</label>
                             </div>
                         </form>
                     </div>
                 </div>
-                <!--           </div>
-                       </div>
-                   </div>
-               </div>-->
             </div>
         </div>
     </div>
@@ -103,25 +95,17 @@
 <div class="container" th:fragment="singleQuestion">
     <div class="row">
         <div class="col-md-12">
-            <div class="jumbotron" onclick="AddShortAnsQuesTextBox()">
+            <div class="jumbotron" onclick="editShortAnsQues()">
                 <h4 id="questionSA">New Question here...</h4>
-                <!-- <div class="container">
-                     <div class="row">
-                         <div class="col-md-12">
-                             <div class="well">-->
                 <div class="row">
                     <div class="col-md-12">
-                        <form id="options">
+                        <form id="optionsSA">
                             <div class="form-control">
                                 <input type="text" name="shortAns" value=""/>
                             </div>
                         </form>
                     </div>
                 </div>
-                <!--           </div>
-                       </div>
-                   </div>
-               </div>-->
             </div>
         </div>
     </div>
@@ -142,25 +126,28 @@
 </div>
 
 
-<div th:replace="common/header :: before-body-scripts"/>
 
 
 <!--Star option part-->
 <div class="container" th:fragment="starRatingQuestion">
     <div class="row">
         <div class="col-md-12">
-            <div class="jumbotron" onclick="editMultipleChoiceQuestion()">
-                <h4 id="questionStar">New Question here...</h4>
+            <div class="jumbotron" onclick="editStarRatingQues()">
+                <h4 id="questionStar" >New Question here...</h4>
                 <div class="row">
                     <div class="col-md-12">
-                        <form id="starOptions">
-                            <h2>Star Rating</h2>
-                            <span id="star1" class="fa fa-star" onclick ="markChecked('star1')"></span>
-                            <span id="star2" class="fa fa-star" onclick ="markChecked('star2')"></span>
-                            <span id="star3" class="fa fa-star" onclick ="markChecked('star3')"></span>
-                            <span id="star4" class="fa fa-star" onclick ="markChecked('star4')"></span>
-                            <span id="star5" class="fa fa-star" onclick ="markChecked('star5')"></span>
-                        </form>
+                        <ul class="rate-area">
+                            <input type="radio" id="5-star" name="rating" value="5" />
+                            <label for="5-star" title="Amazing" style="height: 70px; width: 70px">5 stars</label>
+                            <input type="radio" id="4-star" name="rating" value="4" />
+                            <label for="4-star" title="Good" style="height: 70px; width: 70px">4 stars</label>
+                            <input type="radio" id="3-star" name="rating" value="3" />
+                            <label for="3-star" title="Average" style="height: 70px; width: 70px">3 stars</label>
+                            <input type="radio" id="2-star" name="rating" value="2" />
+                            <label for="2-star" title="Not Good" style="height: 70px; width: 70px">2 stars</label>
+                            <input type="radio" id="1-star" name="rating" value="1" />
+                            <label for="1-star" title="Bad" style="height: 70px; width: 70px">1 star</label>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -168,5 +155,23 @@
     </div>
 </div>
 
+<div class="container" th:fragment="editStarRatingQuestion">
+    <div class="well">
+        <div class="row">
+            <div class="col-md-12">
+                <form class="form-group" id="editQuesStarRating">
+                    <label id="quesTextStarRating">Type your question here</label><br/>
+                    <input type="text" class="text" id="quesTextStarRatingField" oninput="editStarRatingQuesText()"/>
+                    <br/>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+
+<div th:replace="common/header :: before-body-scripts"/>
 </body>
 </html>
